--- a/bibtex.bib
+++ b/bibtex.bib
@@ -119,3 +119,38 @@
   langid = {english},
   file = {/home/aucf/ARCHIVES/BIBLIO/Modelling/Shchepetkin_McWilliams_OM05.pdf}
 }
+
+@article{godin_wave_2011,
+  author    = {A. Godin},
+  title     = {An exact wave equation for sound in inhomogeneous, moving, and non-stationary fluids},
+  year      = {2011},
+  journal = {OCEANS'11 MTS/IEEE KONA},
+  publisher = {Institute of Electrical and Electronics Engineers},
+  doi       = {10.23919/OCEANS.2011.6106920},
+}
+
+@book{McWilliams_2016,
+  author    = {J. McWilliams},
+  title     = {Submesoscale currents in the ocean},
+  publisher = {Royal Society},
+  year      = {2016},
+  doi       = {https://doi.org/10.1098/rspa.2016.0117},
+}
+
+@article{shear_instabilities_2018,
+  author    = {T.S. Eaves, N.J. Balmforth},
+  title     = {Instability of sheared density interfaces},
+  year      = {2018},
+  journal = {Journal of Fluid Mechanics},
+  publisher = {Cambridge University},
+  doi       = { https://doi.org/10.1017/jfm.2018.827},
+}
+
+@article{CL_acous_2015,
+  author    = {J. Smith},
+  title     = {Revisiting Oceanic Acoustic Gravity Surface Waves},
+  year      = {2015},
+  journal = {Journal of physical Oceanography},
+  publisher = {University of California},
+  doi       = {https://doi.org/10.1175/JPO-D-14-0256.1},
+}
